feat: add achievement styles for both games, fix achievement check functionality with both games

--- a/front-end/src/games/typing-adventure/game-styles/game-map.scss
+++ b/front-end/src/games/typing-adventure/game-styles/game-map.scss
@@ -1,7 +1,7 @@
 .game-map {
   width: 100vw;
   height: 100vh;
-  background-image: url('./assets/bg.png');
+  background-image: url('./assets/games/typing-adventure/bg.png');
   background-size: contain;
   padding: 20px;
   display: flex;
