--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -25,4 +25,5 @@
 @import './styles/blocks/customization.scss';
 
 // Games
-@import './games/typing-hero/typing-hero.scss'
+@import './games/typing-adventure/typing-adventure.scss';
+@import './games/typing-hero/typing-hero.scss';
