--- a/front-end/src/games/typing-hero/styles/achievement.scss
+++ b/front-end/src/games/typing-hero/styles/achievement.scss
@@ -15,46 +15,38 @@
 
 .achievement-modal {
   z-index: 20;
-  width: 270px;
-  height: 130px;
   position: fixed;
-  left: 20px;
-  box-shadow: 0 0 15px black;
-  background-color: white;
+  left: 2rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
-  border-radius: 10px;
+  column-gap: 1rem;
+  max-width: min-content;
+  padding: 1rem;
+  background-color: $c-body-bg;
+  border-radius: $small-border-radius;
+  box-shadow: $bxs-result-shadow;
   animation: appear 7s;
 }
 
 .achievement-title {
-  color: orange;
-  font-size: 18px;
-  font-style: oblique;
-}
-
-.achievement-content-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  justify-content: space-between;
+  color: $c-accent;
 }
 
 .achievement-text-wrapper {
+  @include font-main-small;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  max-width: 17rem;
+  min-width: 15rem;
+  row-gap: 1rem;
 }
 
 .achievement-img {
-  width: 45px;
-  height: 45px;
+  width: 8rem;
+  height: 8rem;
 }
 
 .achievement-text {
-  font-size: 18px;
-  color: darkmagenta;
+  color: $c-main-text;
 }
