--- a/front-end/src/games/typing-hero/styles/lvl-field.scss
+++ b/front-end/src/games/typing-hero/styles/lvl-field.scss
@@ -73,7 +73,7 @@
   margin: 7rem auto 0 auto;
   border-radius: $big-border-radius;
   background-color: $c-letters-field;
-  border-width: 0.2rem 0px 0.6rem 0px;
+  border-width: 0.2rem 0 0.6rem 0;
   border-style: solid;
   border-color: $c-accent;
   display: flex;
