refactor: remove comments, add variable for disabled button color

--- a/front-end/src/games/typing-hero/styles/modals.scss
+++ b/front-end/src/games/typing-hero/styles/modals.scss
@@ -94,7 +94,7 @@
     border-color: $c-hero-modal-title-btn;
   }
   &:disabled {
-    color: #B7B7B7;
+    color: $c-hero-disabled-modal;
     &:hover {
       border-color: $c-hero-borders;
     }
