--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -80,6 +80,7 @@ body.light {
   --bg-lesson-sound-hover: url(./assets/images/background/icons/icon-lesson-sound-hover-light.svg);
   --bg-lesson-skin: url(./assets/images/background/icons/icon-lesson-kb-light.svg);
   --bg-lesson-skin-hover: url(./assets/images/background/icons/icon-lesson-kb-hover-light.svg);
+  --bg-game-two-bg: url(./assets/images/games/games-game-2-light.svg);
 }
 
 body.dark {
@@ -164,6 +165,7 @@ body.dark {
   --bg-lesson-sound-hover: url(./assets/images/background/icons/icon-lesson-sound-hover-dark.svg);
   --bg-lesson-skin: url(./assets/images/background/icons/icon-lesson-kb-dark.svg);
   --bg-lesson-skin-hover: url(./assets/images/background/icons/icon-lesson-kb-hover-dark.svg);
+  --bg-game-two-bg: url(./assets/images/games/games-game-2-dark.svg);
 }
 
 $c-body-bg: var(--c-body-bg);
@@ -208,7 +210,8 @@ $bg-dev-avatar: #E4E4E4;
 
 $bg-icon-github: url(./assets/images/background/icons/icon-github.svg);
 $bg-home-wave: url(./assets/images/background/home/home-wave.svg);
-$bg-game-bg: url(./assets/images/games/games-game-1.png);
+$bg-game-one-bg: url(./assets/images/games/games-game-1.svg);
+$bg-game-two-bg: var(--bg-game-two-bg);
 $bg-icon-back: url(./assets/images/background/icons/icon-back.svg);
 $bg-icon-restart: url(./assets/images/background/icons/icon-restart.svg);
 
