--- a/front-end/src/styles/blocks/customization.scss
+++ b/front-end/src/styles/blocks/customization.scss
@@ -243,7 +243,7 @@
 
 .active-sound-option {
   background-color: $c-accent;
-  color: white;
+  color: $c-white;
   border-radius: $small-border-radius;
 }
 
