--- a/front-end/src/styles/blocks/test.scss
+++ b/front-end/src/styles/blocks/test.scss
@@ -1,7 +1,6 @@
 .test {
   display: grid;
   grid-template-columns: minmax(min-content, 110rem);
-  row-gap: 10rem;
   max-width: 110rem;
   padding: 0 8rem;
   margin: 6rem auto 2rem;
@@ -12,7 +11,6 @@
 
   @include tablet {
     padding: 0 3rem;
-    row-gap: 5rem;
   }
 
   @include mobile {
@@ -20,10 +18,15 @@
   }
 }
 
-.test-top {
+.test-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 6rem;
+
+  @include tablet {
+    margin-bottom: 2rem;
+  }
 }
 
 .test-btns-text {
@@ -71,6 +74,19 @@
   }
 }
 
+.test-stats {
+  @include font-subtitle-mobile;
+  display: flex;
+  column-gap: 4rem;
+  color: $c-menu-inactive-link;
+
+  @include tablet {
+    @include font-main;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
 .test-restart {
   width: 4rem;
   height: 4rem;
@@ -97,12 +113,13 @@
   background-color:$c-correction;
 }
 
-.test-text {
+.test-text-wrapper {
   @include font-subtitle;
   color: $c-main-text;
   letter-spacing: 0.4rem;
   word-spacing: 0.4rem;
-  height: 25rem;
+  height: 24rem;
+  margin-bottom: 4rem;
   overflow: hidden;
 
   &::before {
@@ -121,32 +138,16 @@
   margin: 0 0.1rem;
 }
 
-.test-text-wrapper {
-  width: 100%;
-  margin: 0 auto;
-
-  @include tablet {
-    width: 100%;
-  }
-}
-
 .test-input {
   width: 0;
+  height: 0;
 }
 
-.test-stats {
-  @include font-subtitle-mobile;
-  color: $c-menu-inactive-link;
+.test-top {
   display: flex;
-  column-gap: 4rem;
   justify-content: space-between;
   align-items: center;
-
-  @include tablet {
-    @include font-main;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+  margin-bottom: 1rem;
 }
 
 .test-mistakes-wrapper {
@@ -211,14 +212,14 @@
 .test-result-ribbon {
   @include font-subtitle;
   height: 6rem;
-  width: 70rem;
+  width: 60rem;
   background-color: $c-block-bg;
   color: $c-main-text;
   display: flex;
   align-items: center;
-  column-gap: 2rem;
+  column-gap: 4rem;
   position: relative;
-  padding: 0 3rem 0 8rem;
+  padding: 0 3rem;
 
   @include tablet {
     @include font-subtitle-mobile;
@@ -250,4 +251,40 @@
 
 .result-ribbon-text {  
   color: $c-accent;
+}
+
+.result-ribbon-accuracy {
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 0.2rem;
+    height: 100%;
+    border-radius: $small-border-radius;
+    background-color: $c-accent;
+    top: 0;
+    left: -2rem;
+
+    @include tablet {
+      display: none;
+    }
+  }
+}
+
+.test-time {
+  @include font-subtitle-mobile;
+  margin: 0 auto 3rem;
+  color: $c-menu-inactive-link;
+  display: flex;
+  column-gap: 1rem;
+  line-height: 3rem;
+  vertical-align: middle;
+  background-color: $c-block-bg;
+  padding: 1rem 2rem;
+  border-radius: $small-border-radius;
+
+  @include tablet {
+    margin-bottom: 2rem;
+  }
 }
