--- a/front-end/src/styles/blocks/customization.scss
+++ b/front-end/src/styles/blocks/customization.scss
@@ -41,10 +41,11 @@
 }
 
 .options-panel-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
-  width: 100%;
-  height: 100vh;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 4;
 }
 
