--- a/front-end/src/styles/blocks/lesson.scss
+++ b/front-end/src/styles/blocks/lesson.scss
@@ -353,10 +353,11 @@
 }
 
 .intro-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
-  width: 100%;
-  height: 100vh;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 19;
   background: $c-bg-modal-overlay;
 }
