--- a/front-end/src/games/typing-adventure/game-styles/game-map.scss
+++ b/front-end/src/games/typing-adventure/game-styles/game-map.scss
@@ -1,5 +1,5 @@
 .game-map {
-  background: linear-gradient(180deg, #160A30 0%, #130432 100%);
+  background: linear-gradient(180deg, #010000 0%, #0E0325 95.1%, #130432 100%);
   min-height: 100vh;
   padding: 5rem 0 8rem 0;
 
