--- a/front-end/src/games/typing-adventure/typing-adventure.scss
+++ b/front-end/src/games/typing-adventure/typing-adventure.scss
@@ -1,4 +1,5 @@
 @import './game-styles/game-field.scss';
+@import './game-styles/selectors-styles.scss';
 @import './game-styles/modal.scss';
 @import './game-styles/achievement.scss';
 @import './game-styles/field-tutorial.scss';
