--- a/front-end/src/styles/common/variables.scss
+++ b/front-end/src/styles/common/variables.scss
@@ -16,6 +16,7 @@ $mobile-width: 599px;
 $mobile-badges-width: 479px;
 $mobile-small-width: 422px;
 $mobile-small-badges-width: 379px;
+$desktop-adventure: 1440px;
 
 $desktop-margin: 8rem;
 $tablet-margin: 5rem;
