--- a/front-end/src/games/typing-adventure/game-styles/game-field.scss
+++ b/front-end/src/games/typing-adventure/game-styles/game-field.scss
@@ -67,6 +67,7 @@
 }
 
 .spells-field-panel {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -350,6 +351,7 @@
 }
 
 .hero-field-panel {
+  position: relative;
   max-width: 100rem;
   margin: 0 auto;
   padding: 0 5rem;
