refactor: add variables for typing adventure

--- a/front-end/src/games/typing-adventure/game-styles/game-field.scss
+++ b/front-end/src/games/typing-adventure/game-styles/game-field.scss
@@ -8,7 +8,7 @@
 
 .field-header {
   height: 10rem;
-  background-color: #250D40; //////////////////////// VAR 4
+  background-color: $c-adventure-field-blocks;
 }
 
 .field-header-wrapper {
@@ -26,9 +26,9 @@
   top: 4.5rem;
   left: 2rem;
   margin-right: 0;
-  color: #75819C; //////////////////////// VAR 3
+  color: $c-adventure-back-button;
   &:hover {
-    color: #9271EE;
+    color: $c-adventure-title-content;
   }
 
   @include mobile {
@@ -84,7 +84,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  background-color: #180734; //////////////////////// ANOTHER ONE
+  background-color: $c-adventure-action-spell-bg;
   border-radius: $small-border-radius;
   padding: 1rem 1rem;
   &.beast-action {
@@ -164,9 +164,9 @@
   min-width: 10rem;
   padding: 0 1rem;
   height: 4rem;
-  background: #250D40; //////////////////////// VAR 11
+  background: $c-adventure-field-blocks;
   border-radius: $small-border-radius;
-  color: #F3F3F4; //////////////////////// ONE OF HEIGHT
+  color: $c-adventure-text-content;
 
   @include tablet {
     width: 8rem;
@@ -188,7 +188,7 @@
   text-align: center;
   top: -3rem;
   left: calc(50% - 2rem);
-  color: #911059;
+  color: $c-adventure-hp-result;
 }
 
 .action-field-panel {
@@ -214,7 +214,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #F3F3F4;
+  color: $c-adventure-text-content;
 
   @media (max-width: $desktop-adventure) {
     @include font-title-mobile;
@@ -235,9 +235,9 @@
   position: relative;
   width: 20rem;
   min-height: 8rem;
-  background: #250D40; //////////////////////// VAR 11
+  background: $c-adventure-field-blocks;
   border-radius: $big-border-radius;
-  color: #F3F3F4; //////////////////////// ONE OF HEIGHT;
+  color: $c-adventure-text-content;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -301,7 +301,7 @@
 .beast-field-name {
   @include font-title-mobile;
   text-transform: capitalize;
-  color: #9271EE; //////////////////////// ONE OF HEIGHT;
+  color: $c-adventure-title-content;
   text-align: center;
 
   @include tablet {
@@ -330,9 +330,9 @@
 .beast-action-wrapper {
   width: 8rem;
   height: 4rem;
-  background-color: #250D40; //////////////////////// ONE OF HEIGHT;
+  background-color: $c-adventure-field-blocks;
   border-radius: $small-border-radius;
-  color: #9271EE; //////////////////////// ONE OF HEIGHT;
+  color: $c-adventure-title-content;
   font-size: 1.6rem;
   font-weight: $fw-bold;
   text-transform: capitalize;
@@ -347,7 +347,7 @@
 
 .field-footer {
   height: 15rem;
-  background-color: #260D40; //////////////////////// MAYBE NEW;
+  background-color: $c-adventure-field-blocks;
 }
 
 .hero-field-panel {
