--- a/front-end/src/games/typing-adventure/game-styles/achievement.scss
+++ b/front-end/src/games/typing-adventure/game-styles/achievement.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.achievement-modal {
+.adventure-achievement-modal {
   z-index: 20;
   position: fixed;
   left: 2rem;
@@ -23,17 +23,17 @@
   column-gap: 1rem;
   max-width: min-content;
   padding: 1rem;
-  background-color: #130432; ///////////////// VAR
+  background-color: $c-adventure-modal-bg;
   border-radius: $small-border-radius;
-  box-shadow: 0 0 1rem rgba(33, 37, 41, 0.15); ///////////////// VAR
+  box-shadow: $c-adventure-modal-shadow;
   animation: appear 7s;
 }
 
-.achievement-title {
-  color: #9271EE; ///////////////// VAR
+.adventure-achievement-title {
+  color: $c-adventure-title-content;
 }
 
-.achievement-text-wrapper {
+.adventure-achievement-text-wrapper {
   @include font-main-small;
   display: flex;
   flex-direction: column;
@@ -47,6 +47,6 @@
   height: 8rem;
 }
 
-.achievement-text {
-  color: #F3F3F4; ///////////////// VAR
+.adventure-achievement-text {
+  color: $c-adventure-text-content;
 }
