--- a/front-end/src/games/typing-adventure/game-styles/selectors-styles.scss
+++ b/front-end/src/games/typing-adventure/game-styles/selectors-styles.scss
@@ -61,7 +61,7 @@
 .action-spell-name.water-storm,
 .action-spell-name.waterspout,
 .action-spell-name.furious-flow {
-  color: #4C83DB; //////////////////////// VAR 5
+  color: $c-adventure-spells-water;
 }
 
 .action-spell-name.fire,
@@ -69,7 +69,7 @@
 .action-spell-name.fiery-hail,
 .action-spell-name.fiery-hurricane,
 .action-spell-name.burning-onslaught {
-  color: #E24374; //////////////////////// VAR 6
+  color: $c-adventure-spells-fire;
 }
 
 .action-spell-name.wind,
@@ -77,7 +77,7 @@
 .action-spell-name.furious-whirlwind,
 .action-spell-name.windspout,
 .action-spell-name.massive-tornado {
-  color: #535898; //////////////////////// VAR 7
+  color: $c-adventure-spells-wind;
 }
 
 .action-spell-name.light,
@@ -85,7 +85,7 @@
 .action-spell-name.rising-glow,
 .action-spell-name.shining-vortex,
 .action-spell-name.luminous-pillar {
-  color: #F99A16; //////////////////////// VAR 8
+  color: $c-adventure-spells-light;
 }
 
 .action-spell-name.thunder,
@@ -93,13 +93,13 @@
 .action-spell-name.thunder-blow,
 .action-spell-name.lightning-blast,
 .action-spell-name.whirlwind-lightning {
-  color: #BDBDD8; //////////////////////// VAR 9
+  color: $c-adventure-spells-thunder;
 }
 
 .action-spell-name.elemental-chars,
 .action-spell-name.elemental-high-magic,
 .action-spell-name.elemental-great-enchantment {
-  color: #A069E7; //////////////////////// VAR 10
+  color: $c-adventure-spells-elemental;
 }
 
 .beast-field-view.forest-beast-field,
