--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -278,3 +278,20 @@ $bg-lesson-sound: var(--bg-lesson-sound);
 $bg-lesson-sound-hover: var(--bg-lesson-sound-hover);
 $bg-lesson-skin: var(--bg-lesson-skin);
 $bg-lesson-skin-hover: var(--bg-lesson-skin-hover);
+
+$c-adventure-map-bg: linear-gradient(180deg, #010000 0%, #0E0325 95.1%, #130432 100%);
+$c-adventure-modal-bg: #130432;
+$c-adventure-modal-shadow: 0 0 1rem rgba(33, 37, 41, 0.15);
+$c-adventure-title-content: #9271EE;
+$c-adventure-text-content: #F3F3F4;
+$c-adventure-info-spells: #391C6A;
+$c-adventure-field-blocks: #250D40;
+$c-adventure-back-button: #75819C;
+$c-adventure-action-spell-bg: #180734;
+$c-adventure-hp-result: #911059;
+$c-adventure-spells-water: #4C83DB;
+$c-adventure-spells-fire: #E24374;
+$c-adventure-spells-wind: #535898;
+$c-adventure-spells-light: #F99A16;
+$c-adventure-spells-thunder: #BDBDD8;
+$c-adventure-spells-elemental: #A069E7;
