fix: change minor details

--- a/front-end/src/styles/common/themes.scss
+++ b/front-end/src/styles/common/themes.scss
@@ -284,7 +284,7 @@ $c-adventure-modal-bg: #130432;
 $c-adventure-modal-shadow: 0 0 1rem rgba(33, 37, 41, 0.15);
 $c-adventure-title-content: #9271EE;
 $c-adventure-text-content: #F3F3F4;
-$c-adventure-info-spells: #391C6A;
+$c-adventure-info-spells: #9386A9;
 $c-adventure-field-blocks: #250D40;
 $c-adventure-back-button: #75819C;
 $c-adventure-action-spell-bg: #180734;
