--- a/front-end/src/games/typing-adventure/game-styles/game-field.scss
+++ b/front-end/src/games/typing-adventure/game-styles/game-field.scss
@@ -215,6 +215,7 @@
   justify-content: center;
   align-items: center;
   color: $c-adventure-text-content;
+  text-align: center;
 
   @media (max-width: $desktop-adventure) {
     @include font-title-mobile;
