--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -119,6 +119,13 @@
     align-items: center;
     padding-top: 2rem;
   }
+
+  &:hover {
+    .section-title {  
+      transition: $transition-time;
+      color: $c-accent;
+    }
+  }
 }
 
 .section-btn-bg {
